<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#000"
        android:paddingBottom="3dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Log Console"
            android:textColor="#fff"
            />

        <View
            android:id="@+id/line_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/title"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:background="#fff"
            />

        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_1"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/wxt_settings"
            android:textColor="#fff"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/size"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_toRightOf="@id/settings"
            android:layout_below="@id/line_1"
            android:text="@string/wxt_size"
            android:textColor="#fff"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/clear"
            android:layout_toRightOf="@id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/line_1"
            android:text="@string/wxt_clear"
            android:textColor="#fff"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/close"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_toRightOf="@id/clear"
            android:layout_below="@id/line_1"
            android:text="@string/wxt_close"
            android:textColor="#fff"
            android:textSize="13sp"/>


        <TextView
            android:id="@+id/collapse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_1"
            android:layout_toRightOf="@id/close"
            android:layout_marginLeft="20dp"
            android:padding="2dp"
            android:text="@string/wxt_collapse"
            android:textColor="#fff"
            android:textSize="13sp"
            />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/size_content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#8e000000"
        android:visibility="gone"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#fff"/>


        <RadioGroup
            android:layout_marginTop="5dp"
            android:id="@+id/height_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/height_small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="small"
                style="@style/WXTRadioButton"
                android:textColor="#fff"
                android:textSize="12sp"
                />

            <RadioButton
                android:id="@+id/height_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="medium"
                style="@style/WXTRadioButton"
                android:textColor="#fff"

                android:textSize="12sp"
                />

            <RadioButton
                android:id="@+id/height_large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="large"
                style="@style/WXTRadioButton"
                android:textColor="#fff"
                android:textSize="12sp"
                />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8e000000"
        android:orientation="vertical"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#fff"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="hold(off)"
                android:textColor="#fff"
                android:textSize="13sp"/>

        </LinearLayout>





        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#fff"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="log level"
            android:textColor="#fff"
            android:textSize="13sp"/>

        <RadioGroup
            android:id="@+id/level_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/level_v"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="V"
                style="@style/WXTRadioButton"
                android:textColor="#fff"
                android:textSize="12sp"
                />

            <RadioButton
                android:id="@+id/level_i"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="I"
                style="@style/WXTRadioButton"
                android:textColor="#fff"
                android:textSize="12sp"
                />

            <RadioButton
                android:id="@+id/level_d"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="D"
                android:textColor="#fff"
                style="@style/WXTRadioButton"
                android:textSize="12sp"
                />

            <RadioButton
                android:id="@+id/level_w"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="W"
                style="@style/WXTRadioButton"
                android:textColor="#fff"
                android:textSize="12sp"
                />

            <RadioButton
                android:id="@+id/level_e"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="E"
                style="@style/WXTRadioButton"
                android:textColor="#fff"
                android:textSize="12sp"
                />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#fff"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="log filter"
            android:textColor="#fff"
            android:textSize="13sp"/>

        <RadioGroup
            android:id="@+id/rule_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rule_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="all"
                style="@style/WXTRadioButton"
                android:layout_marginRight="10dp"
                android:textColor="#fff"
                android:textSize="12sp"
                />

            <RadioButton
                android:id="@+id/rule_callnative"
                style="@style/WXTRadioButton"
                android:layout_width="wrap_content"
                android:layout_marginRight="10dp"

                android:layout_height="wrap_content"
                android:text="callNative"
                android:textColor="#fff"
                android:textSize="12sp"
                />


            <RadioButton
                android:id="@+id/rule_calljs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="callJS"
                android:textColor="#fff"
                android:layout_marginRight="10dp"

                style="@style/WXTRadioButton"
                android:textSize="12sp"
                />

            <RadioButton
                android:id="@+id/rule_jslog"
                style="@style/WXTRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="js log"
                android:textColor="#fff"
                android:layout_marginRight="10dp"

                android:textSize="12sp"
                />

            <RadioButton
                android:id="@+id/rule_exception"
                style="@style/WXTRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="js exception"
                android:textColor="#fff"
                android:textSize="12sp"
                />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#fff"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="search"
            android:textColor="#fff"
            android:textSize="13sp"/>

        <RelativeLayout
            android:paddingBottom="5dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/text_cur_keyword"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/wxt_current_keyword"
                android:textColor="#fff"
                android:layout_below="@+id/btn_input_keyword"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/btn_input_keyword"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/wxt_input_keyword"
                android:layout_marginLeft="50dp"
                android:textColor="#fff"
                android:textSize="13sp"/>


            <TextView
                android:id="@+id/btn_clear_keyword"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_height="20dp"
                android:text="@string/wxt_clear_keyword"
                android:textColor="#fff"
                android:textSize="13sp"/>

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>